--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<section>
+	<section class="container">
     	<div class="row">
-      		<div class="col-sm-12 col-md-12">
+      		<div class="col-xs-12 col-sm-12 col-md-3 direccion">
         		<button id="encuentrame">Encuéntrame</button>
-				<input id="origen-input" class="controles" type="text" placeholder="Ingresa un punto de origen">
-        		<input id="destino-input" class="controles" type="text" placeholder="Ingresa un destino">
-		        <button id="ruta">Ruta</button>
+        	</div>
+        	<div class="col-xs-12 col-sm-12 col-md-3 direccion">
+        		<div class="input">
+        			<label for="origen-input">Origen</label>
+					<input id="origen-input" class="controles" type="text" placeholder="Ingresa una dirección de origen">
+				</div>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-3 direccion">
+				<div class="input">	
+					<label for="destino-input">Destino</label>
+        			<input id="destino-input" class="controles" type="text" placeholder="Ingresa una dirección de destino">
+        		</div>
+        	</div>
+        	<div class="col-xs-12 col-sm-12 col-md-3 direccion">
+		        <button class="marca-ruta" id="ruta">Ruta</button>
       		</div>
 	    </div>
    
@@ -32,7 +44,9 @@
       			<label for="buscar-auto">En auto</label>
     		</div>
     	</div>
+    </section>
 
+    <section class="container-fluid">
 		<div class="row">
 			<div id="map" class="col-sm-12 col-md-12">
 			</div>
